<?xml version="1.0"?>
<package>
  <name>rpl_vo</name>
  <version>0.0.0</version>
  <description>rpl_vo metapackage</description>
  <maintainer email="eay@kth.se">Emre Ay</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
	<metapackage />
  </export>
</package>
